+ Added console adapter prototype for Web.

--- a/Web/TestApp/TestApp/1.html
+++ b/Web/TestApp/TestApp/1.html
@@ -9,42 +9,19 @@
 		font-family: 'Courier New', 'Consolas',monospaced;
 	}
   </style>
-    <script type="text/javascript">
-      var jsilConfig = {
-        printStackTrace: false,
-        xna: 4,
+      <script type="text/javascript">
+          var jsilConfig = {
+              printStackTrace: false,
+              xna: 4,
  
-        manifests: [
-          "TestApp.exe"
-        ],
-      };
-
-	  function getRelativePos(mouseEvent, element) {
-		var rect = element.getBoundingClientRect();
-		var scrollTop = document.documentElement.scrollTop?
-						document.documentElement.scrollTop:document.body.scrollTop;
-		var scrollLeft = document.documentElement.scrollLeft?                   
-						document.documentElement.scrollLeft:document.body.scrollLeft;
-		var elementLeft = rect.left+scrollLeft;  
-		var elementTop = rect.top+scrollTop;
-
-			if (document.all){ //detects using IE   
-				//event not evt because of IE
-				x = event.clientX+scrollLeft-elementLeft; 
-				y = event.clientY+scrollTop-elementTop;
-				return {x: x, y: y};
-			}
-			else{
-				x = mouseEvent.pageX-elementLeft;
-				y = mouseEvent.pageY-elementTop;
-				return {x: x, y: y};
-		}
-	}
-    </script>
+              manifests: [
+                  "TestApp.exe"
+              ],
+          };
+      </script>
+      <script src="ConsoleAdapter.js" type="text/javascript"></script>
     <script src="../Libraries/JSIL.js" type="text/javascript"></script>
     
-    <!--<canvas id="canvas" width="1280" height="720">
-    </canvas><br>-->
 	<div id="div1" style="background: green; display: inline-block;"></div>
  
     <div id="log"></div>
