+ Fixed multiple bugs with JSIL. Web prototype is working now !

--- a/Web/TestApp/TestApp/1.html
+++ b/Web/TestApp/TestApp/1.html
@@ -31,8 +31,8 @@
         // We can't invoke Main() since it disposes the Game immediately, breaking everything.
         var asm = JSIL.GetAssembly("TestApp", true);
 		asm.TestApp.Program.Main([]);
-        //var game = new asm.TestApp.Program();
-        //game.Run();
+//          var asm = JSIL.GetAssembly("TestApp", true);
+//          asm.TestApp.Program2.Main([]);
       };
     </script>
   </body>
