--- a/Web/TestApp/TestApp/1.html
+++ b/Web/TestApp/TestApp/1.html
@@ -22,9 +22,9 @@
       <script src="ConsoleAdapter.js" type="text/javascript"></script>
     <script src="../Libraries/JSIL.js" type="text/javascript"></script>
     
-	<div id="div1" style="background: green; display: inline-block;"></div>
+	<div id="div1" style="background: green; display: inline-block; vertical-align: top;"></div>
  
-    <div id="log"></div>
+    <div id="log" style="display: inline-block;"></div>
  
     <script type="text/javascript">
       function runMain () {
